--- a/src/components/HeaderPage/styles.module.scss
+++ b/src/components/HeaderPage/styles.module.scss
@@ -1,11 +1,24 @@
 
-
 .carouselImageWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   max-height: 533px;
+  margin-top: 180px;
 }
+
+@media (max-width: 768px) {
+  .carouselImageWrapper {
+    margin-top: 20px; /* Ajuste o valor conforme necessário */
+  }
+}
+
+@media (max-width: 480px) {
+  .carouselImageWrapper {
+    margin-top: 10px; /* Ajuste o valor conforme necessário */
+  }
+}
+
 .carouselImageWrapper-enter {
   opacity: 0;
   transform: scale(0.9);
@@ -34,6 +47,7 @@
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+  
 }
 
 .carouselImageFit {
@@ -44,7 +58,8 @@
 
 
 .carousel {
-  margin-top: 140px;
+  margin-top: 120px;
+  
 }
 
 .carousel img {
@@ -65,7 +80,7 @@
 }
 
 .barraVerde p {
-  font-size: 20px;
+  font-size: 15px;
   color: #FFFFFF;
   font-weight: bold;
   text-transform: uppercase;
