--- a/src/components/SearchBar/CursosEad.module.scss
+++ b/src/components/SearchBar/CursosEad.module.scss
@@ -6,6 +6,7 @@
   border-radius: 20px;
   padding: 5px 10px;
   margin-top: -120px;
+  padding-top: 170px;
   
 
   input {
@@ -33,7 +34,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 100px;
-  margin-bottom: -15px;
+  margin-bottom: 20px;
 }
 
 .searchResultsContainer {
@@ -44,17 +45,19 @@
 
 .treatmentsContainer {
   display: flex;
-  justify-content: center; /* Centraliza os resultados horizontalmente */
-  margin: 50px; /* Adiciona espaçamento de 50px nas laterais */
+  justify-content: center;
+  margin: 0;
 }
 
 .treatments {
-  margin: 0 auto; /* Centraliza os resultados horizontalmente */
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 20px; /* Espaçamento entre as colunas dos resultados */
-  max-width: 1500px;
-  width: 100%; /* Ocupa 100% do espaço disponível */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  max-width: 1200px;
+  width: 100%;
+
+
 
   .treatmentsItem {
     background-color: none;
