--- a/src/pages/cursos_ead/styles.module.scss
+++ b/src/pages/cursos_ead/styles.module.scss
@@ -53,6 +53,7 @@
 .images {
   margin-bottom: 90px;
   color: var(--blue-black);
+  margin-top: 150px;
   .imagesContainer {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
