--- a/src/components/SearchBar/CursosEad.module.scss
+++ b/src/components/SearchBar/CursosEad.module.scss
@@ -1,7 +1,7 @@
 .floatingButton {
   position: fixed;
   bottom: 20px;
-  right: 50px;
+  right: 20px;
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -112,32 +112,36 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 50px;
 }
 
 .treatmentsContainer {
   display: flex;
   justify-content: center; /* Centraliza os resultados horizontalmente */
   margin: 50px; /* Adiciona espaçamento de 50px nas laterais */
+
 }
 
 .treatments {
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 10px;
-  max-width: 1500px;
   width: 100%;
  
   .treatmentsItem {
-  background-color: none;
-  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
-  padding: var(--s32);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  padding-bottom: 40px;
-  transition: transform 0.3s ease;
+    background-color: none;
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
+    padding: var(--s16);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    padding-bottom: 10px;
+    transition: transform 0.3s ease;
+    width: 240px; /* Adicione essa linha para definir a largura */
+    height: 500px; /* Ajuste a altura conforme necessário */
+
  
   h3 {
     margin-top: 62px;
@@ -163,7 +167,8 @@
   overflow-y: auto;
   padding: 0 1rem;
   color: var(--blue-black);
-  margin-bottom: 35px;
+  margin-bottom: 15px;
+  background-color: #f5f5f5;
  
   p {
   font-size: 11px;
@@ -193,6 +198,7 @@
   
 
   .courseInfo {
+    
     display: flex;
     justify-content: center;
     text-align: center;
@@ -206,6 +212,7 @@
   
       .courseInfoText {
         font-size: 12px;
+        color: black;
       }
     }
   }
@@ -225,25 +232,33 @@
   }
     
   .quantityOption {
-    margin-top: 5px;
+    margin-top: 15px;
+    font-size: 12px;
+    color: black;
   }
   
-  .course-button {
-    position: absolute;
+  .courseButton {
+    position: static;
     bottom: 5px;
     margin-bottom: 5px;
-
+    margin-top: 5px;
+    width: 120px;
+    height: 40px;
+    border-radius: 15px;
+    
     &.selected {
       border-color: #1A6F45;
       box-shadow: 0 0 0 4px rgba(26, 111, 69, 0.3);
     }
   }
-  .course-container {
-    position: absolute; /* Adicione esta linha */
+  .courseContainer {
+    position: absolute;
+    opacity: 1;
   }
   
  
 .imagesContainer {
+  position: absolute;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: var(--s24);
